# gear-query

./: Cargo.toml  README.md
src/: arguments.rs  error.rs  filter.rs  lib.rs  main.rs  sum.rs  table.rs  validate.rs
src/column/: align.rs  column.rs  content.rs  fitted.rs  left.rs  mod.rs  right.rs
src/column/aligned/: centre.rs  mod.rs
src/filters/: filter.rs  is_in_distances.rs  is_in_groups.rs  is_in_temperatures.rs  mod.rs
src/input/: gear.rs  group.rs  meta.rs  mod.rs
src/input/formatters/: mod.rs  unit.rs
src/input/item/: columns.rs  item.rs  mod.rs
src/validators/: distances_values.rs  group_values.rs  mod.rs  temperatures_values.rs  validator.rs  validity.rs
