[package]
name = "gear"
description = """Gear query is an easy to use command line tool to keep track \
                 and query outdoor / backpacking equipment"""
version = "0.5.0"
authors = ["Peter Varo <hello@petervaro.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
toml = "0.5.6"
serde = { version = "1.0.105", features = ["derive"] }
